# ESERISIA

./: .gitignore  ETAPE_ULTIME_ACCOMPLIE.md  IDE_GUIDE.md  MISSION_ACCOMPLISHED.md  PRESENTATION_COMPLETE.py  README.md  STATUS_EVOLUTIF.md  SYSTEM_STATUS_FINAL.md  TRAINING_SYSTEM_SUMMARY.md  dashboard.html  dashboard_static.html  demo.py  eserisia_ide  eserisia_ide.bat  eserisia_launcher.py  eserisia_system_tester.py  eserisia_training_plan.json  eserisia_ultimate_simple.py  example_complete.py  phase_optimisation_ultimate.py  pyproject.toml  setup.py
.github/: copilot-instructions.md
api/: main.py
cli/: eserisia_ide.py
deployment/: Dockerfile.eserisia  deploy.sh  docker-compose.yml
eserisia/: __init__.py  ai_core_live.py  code_templates.py  database.py  dev_assistant.py  ide_engine.py  models.py  project_generator.py  project_generator_simple.py  system_integration.py  ui_ultimate.py
eserisia-api-ultimate/: README.md  main.py  requirements.txt
eserisia/consciousness/: consciousness_core.py
eserisia/core/: __init__.py
eserisia/evolution/: __init__.py  evolution_engine.py
eserisia/extensions/: cuda_implementations.cu  cuda_kernels.cpp
eserisia/inference/: __init__.py
eserisia/quantum/: __init__.py  quantum_core.py
eserisia/security/: __init__.py
eserisia/training/: __init__.py  dashboard.py  dashboard_simple.py  distributed_trainer.py  training_controller.py  training_monitor.py  training_planner.py
eserisia/ultimate/: ultimate_system.py
eserisia/utils/: __init__.py
mon-projet-web/: README.md  package.json
mon-projet-web/src/app/: page.tsx
projets-demo/test-api-eserisia/: README.md  main.py
projets-demo/test-ml-eserisia/: README.md  main.py  requirements.txt  visualize.py
projets-demo/test-web-eserisia/: README.md  package.json
projets-demo/test-web-eserisia/src/app/: page.tsx
web/: app.py  app_dev.py  app_ide.py  app_premium.py  app_simple.py
