[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10.0", "cmake>=3.20"]
build-backend = "setuptools.build_meta"

[project]
name = "eserisia-ai"
version = "1.0.0"
description = "Ultimate Advanced AI System - Next-Generation Evolutionary Intelligence"
authors = [{name = "ESERISIA Team", email = "ai@eserisia.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Programming Language :: CUDA",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML Frameworks (Latest 2025)
    "torch>=2.3.0",
    "torchvision>=0.18.0", 
    "torchaudio>=2.3.0",
    "tensorflow>=2.16.0",
    "jax[cuda]>=0.4.25",
    "flax>=0.8.2",
    
    # Transformers & LLMs
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
    "flash-attn>=2.5.8",
    "vllm>=0.4.2",
    
    # Advanced AI
    "langchain>=0.2.0",
    "llama-index>=0.10.0",
    "autogen-agentchat>=0.2.0",
    "crewai>=0.30.0",
    
    # Quantum Computing
    "qiskit>=1.1.0",
    "cirq>=1.4.0",
    "pennylane>=0.36.0",
    
    # Distributed Computing
    "ray[default]>=2.10.0",
    "dask[complete]>=2024.5.0",
    "horovod>=0.28.1",
    
    # MLOps & Monitoring
    "mlflow>=2.12.0",
    "wandb>=0.17.0",
    "tensorboard>=2.16.0",
    "optuna>=3.6.0",
    
    # Data & Vector DBs
    "datasets>=2.19.0",
    "faiss-gpu>=1.8.0",
    "chromadb>=0.5.0",
    "pinecone-client>=4.1.0",
    "weaviate-client>=4.5.0",
    
    # Computer Vision
    "opencv-python>=4.9.0",
    "pillow>=10.3.0",
    "albumentations>=1.4.0",
    "timm>=0.9.16",
    
    # NLP Advanced
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "sentence-transformers>=2.7.0",
    
    # Performance
    "numba>=0.59.0",
    "cupy-cuda12x>=13.1.0",
    "triton>=2.3.0",
    
    # API & Web
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "streamlit>=1.34.0",
    
    # Development
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "pytest>=8.2.0",
    "black>=24.4.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "pytest-cov>=5.0.0",
    "sphinx>=7.3.0",
    "sphinx-rtd-theme>=2.0.0",
]

quantum = [
    "qiskit-aer>=0.14.0",
    "qiskit-ibm-runtime>=0.23.0",
    "amazon-braket-sdk>=1.74.0",
]

research = [
    "papermill>=2.5.0",
    "nbformat>=5.10.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.21.0",
]

[project.urls]
Homepage = "https://github.com/eserisia/ai"
Repository = "https://github.com/eserisia/ai.git"
Documentation = "https://docs.eserisia.ai"
Changelog = "https://github.com/eserisia/ai/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["eserisia"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
