[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10.0", "cmake>=3.20"]
build-backend = "setuptools.build_meta"

[project]
name = "eserisia-ai"
version = "1.0.0"
description = "Ultimate Advanced AI System - Next-Generation Evolutionary Intelligence"
authors = [{name = "ESERISIA Team", email = "ai@eserisia.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Programming Language :: CUDA",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML Frameworks (Latest 2025)
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "torchaudio>=2.3.0",
    "numpy>=1.24.0",
    
    # Transformers & LLMs
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    
    # Advanced AI
    "pandas>=2.1.0",
    "plotly>=5.21.0",
    
    # MLOps & Monitoring
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.1",
    "typer>=0.12.3",
    "rich>=13.7.0",
    
    # Computer Vision
    "scikit-learn>=1.3.0",
    
    # API & Web
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "streamlit>=1.34.0",
    
    # Development
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "pytest>=8.2.0",
    "black>=24.4.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "pytest-cov>=5.0.0",
    "sphinx>=7.3.0",
    "sphinx-rtd-theme>=2.0.0",
]

research = [
    "papermill>=2.5.0",
    "nbformat>=5.10.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.21.0",
]

[project.urls]
Homepage = "https://github.com/eserisia/ai"
Repository = "https://github.com/eserisia/ai.git"
Documentation = "https://docs.eserisia.ai"
Changelog = "https://github.com/eserisia/ai/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["eserisia"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
